                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 27-04-2006 changed: Playlists location is now a bookmark in Music and Videos.
 - 27-04-2006 changed: switched info/title remote mappings in visualisation window.
 - 27-04-2006 fixed: Settings item didn't show on context menu when in the root bookmark listing.
 - 27-04-2006 removed: Unused "Enter" button in XLink Kai.
 - 27-04-2006 changed: volume up/down/mute mapped to remote 3/6/9 in keymap.
 - 27-04-2006 fixed: [ 1475599 ] Watched movie bug.
 - 27-04-2006 changed: if contenttype indicate flv, skip probing in dvdplayer (skips one seek)
 - 27-04-2006 fixed: curl (http, shout) would fail to seek after hitting eof. 
 - 27-04-2006 fixed: Unnessecary HEAD request to last.fm servers resulting in an error log
 - 27-04-2006 changed: removed old python copy-string from Build.bat since it's no longer needed
 - 27-04-2006 fixed: [ 1463526 ] shoutcast mp2 streaming broken
 - 27-04-2006 updated: python is updated to version 2.4.3 and now moved into a dll. Do not forget to update the system folder
 - 27-04-2006 fixed: [ 1475703 ] LCD and .xbe playing message
 - 27-04-2006 fixed: [ 1475843 ] Freezes with invalid call to xbmcCmds
 - 27-04-2006 fixed: Filemanager didn't show the number and size of the selected objects.
 - 25-04-2006 fixed: [ 1476206 ] zip files don't show subfolders in file manager
 - 25-04-2006 changed: Karaoke display now uses a linear texture (should be marginally faster + less memory)
 - 25-04-2006 changed: Removed mastercode settings from xboxmediacenter.xml - they're now only in the GUI.  Cleaned up the code + GUI look as well.
 - 25-04-2006 updated: Maltese language file (Thnx to michelbugeja)